Fix codestyle